[package]
name = "ntex-compile-error"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
nanocl_utils = { version = "0.7.0", features = ["ntex"] }
ntex = { version = "2.8.0", features = ["openssl", "tokio"] }
ntex-cors = "2.0.0"
num_cpus = "1.16.0"
openssl = { version = "0.10.68", features = ["vendored"] }
